--- a/src/MarketDepth.Sub/appsettings.json
+++ b/src/MarketDepth.Sub/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "nats": {
-    "ClientId": "pub1",
+    "ClientId": "sub1",
     "ClusterId": "crypto-cluster",
     "NatsUrl": "nats://nats:4222",
     "Channel": "binance.depth.btcusdt"
