--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,22 @@ services:
     restart: always
     tty: true
 
-  depthquotes.pub:
+  marketdepth.pub:
     image: ${DOCKER_REGISTRY-}marketdepthpub
     build:
       context: .
       dockerfile: src/MarketDepth.Pub/Dockerfile
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+    env_file:
+      - .env
+    depends_on:
+      - nats
+
+  marketdepth.sub:
+    image: ${DOCKER_REGISTRY-}marketdepthsub
+    build:
+      context: .
+      dockerfile: src/MarketDepth.Sub/Dockerfile
+    env_file:
+      - .env
     depends_on:
       - nats
