ugrade sub service to websocket server

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ BINANCE_API_KEY=
 BINANCE_SECRET_KEY=
 NATS_URL=nats://nats:4222
 NATS_CLUSTER_ID=crypto-cluster
-NATS_CHANNEL=binance.depth.btcusdts
-SYMBOL=BTCUSDT
+NATS_CHANNEL=binance.depth.btcusdt
+SYMBOL=btcusdts
