--- a/src/MarketDepth.Sub.WsServer/MarketDepth.Sub.WsServer.csproj
+++ b/src/MarketDepth.Sub.WsServer/MarketDepth.Sub.WsServer.csproj
@@ -1,16 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dotnet-MarketDepth.Sub-5ee4811e-60ba-4444-94f4-81d297563787</UserSecretsId>
+    <UserSecretsId>dotnet-MarketDepth.Sub.WsServer-5ee4811e-60ba-4444-94f4-81d297563787</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
