--- a/src/MarketDepth.Sub.WsServer/Properties/launchSettings.json
+++ b/src/MarketDepth.Sub.WsServer/Properties/launchSettings.json
@@ -8,7 +8,10 @@
       "dotnetRunMessages": true
     },
     "Docker": {
-      "commandName": "Docker"
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "httpPort": 5050
     }
   }
 }
