--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ASPNETCORE_ENVIRONMENT=Development
-BINANCE_API_KEY=
-BINANCE_SECRET_KEY=
+BINANCE_API_KEY=YOUR-API-KEY
+BINANCE_SECRET_KEY=YOUR-SECRET-KEY
 NATS_URL=nats://nats:4222
 NATS_CLUSTER_ID=crypto-cluster
 NATS_CHANNEL=binance.depth.btcusdt
-SYMBOL=btcusdts
+SYMBOL=btcusdt
