--- a/src/MarketDepth.Infrastructure/MarketDepth.Infrastructure.csproj
+++ b/src/MarketDepth.Infrastructure/MarketDepth.Infrastructure.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="STAN.Client" Version="0.3.0" />
   </ItemGroup>
 
